# drobo

./: Makefile  README.md  environment.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: lint.yml  publish.yml  python-package.yaml  security.yml
doc/: README.md
etc/: droborc.example
src/drobo/: __init__.py  cli.py  commands.py  config.py  dropbox_client.py
test/: test_cli.py  test_commands.py  test_config.py
